recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:9: error: not found: value escamez
    right(90);escamez
              ^